<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/todo_qo_shish"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/sarlavha"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edt_matn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/matn2"
        android:inputType="text"
        android:minHeight="48dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edt_muddat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/muddat"
        android:inputType="datetime"
        android:minHeight="48dp"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/spinner_holat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/holat_spinner"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saqlash" />


</LinearLayout>